# incubator-milagro-dta

./: !notes  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile-alpine  LICENSE  NOTICE  README.md  build-static.sh  build.sh  go.mod  go.sum  lint.sh  open-api.yaml  p  r  r1  r2  r3  r4  test.sh
cmd/service/: commands.go  initnode.go  main.go
cmd/servicetester/: Manual_Tests.txt  block_test.sh  e2e_test.sh  e2e_test_multi.sh  fulltest.sh  go.mod  id_test.sh  looptest  main.go  orders  orders4  ref  refs  refs4  secret  secret4  tendertest1.sh
examples/libdtaidentity/: .gitignore  Makefile  libdtaidentity.go
libs/crypto/: bench_test.go  pqnist.go  pqnist_test.go  secp256k1.go  secp256k1_test.go  wrap.go
libs/crypto/libpqnist/: CMakeLists.txt  CPackConfig.cmake
libs/crypto/libpqnist/examples/: CMakeLists.txt  run_aescbc.c  run_aesgcm.c  run_bls.c  run_bls_add.c  run_bls_bad.c  run_bls_sss.c  run_encap_decap.c  run_pqnist.c  run_sign_verify.c  run_sign_verify_bad.c  run_sike.c
libs/crypto/libpqnist/include/: CMakeLists.txt
libs/crypto/libpqnist/include/amcl/: pqnist.h
libs/crypto/libpqnist/include/pqnist/: pqnist.h
libs/crypto/libpqnist/src/: CMakeLists.txt  pqnist.c
libs/crypto/libpqnist/test/smoke/: CMakeLists.txt  test_aescbc.c  test_aesgcm.c  test_bls.c  test_bls_add.c  test_bls_sss.c  test_encap_decap.c  test_pqnist.c  test_sign_verify.c
libs/crypto/libpqnist/test/unit/: CMakeLists.txt  test_aes_decrypt.c  test_aes_encrypt.c
libs/cryptowallet/: hdwallet.go  hdwallet_test.go  keygen.go  keygen_test.go
libs/datastore/: boltbackend.go  boltbackend_test.go  datastore.go  gobcodec.go  jsoncodec.go
libs/documents/: build  crypto.go  docList.go  docValidation_test.go  docs.go  docs.pb.go  docs.proto  docs.validator.pb.go  docs_test.go  policy_test.go
libs/documents/test-policy-documents/: bad.json  manager.json  one_sg_two_of_three.json  single.json  t_equals_p.json  three_groups.json  two_sg.json
libs/ipfs/: apiconnector.go  ipfs.go  memory.go  nodeconnector.go  nodeconnector_test.go
libs/keystore/: filestore.go  filestore_test.go  keystore.go  memorystore.go  memorystore_test.go
libs/logger/: logger.go  textlogger.go
libs/transport/: authorizer.go  http.go
libs/validators/: customvalidators.go
pkg/api/: client.go  proto.go
pkg/bitcoinplugin/: coin.go  coin_test.go  helpers.go  helpers_test.go  open-api.yaml  service.go
pkg/common/: chain.go  common.go
pkg/config/: config.go  default.go
pkg/defaultservice/: fulfill.go  fulfillTX.go  identity.go  init.go  order.go  orderTX.go  plugable.go  service.go
pkg/endpoints/: endpoints.go
pkg/identity/: identity.go  identity_test.go  keys.go
pkg/safeguardsecret/: README.md  open-api.yaml  service.go
pkg/service/: service.go
pkg/tendermint/: config.go  connector.go  json.go  tendermint.go  tendermint_test.go  transactions.go  websockets.go
pkg/tendermint/cmd/: fishhook.go  transactions.go
pkg/tendermint/fishhook/: build  main.go  run
pkg/tendermint/query/: queryresponse.go
pkg/tendermint/status/: statusresponse.go
pkg/tendermint/temp/: tendermint.go  tendermint_test.go  websockets.go
plugins/: bitcoinplugin.go  milagroplugin.go  plugin.go  safeguardsecret.go
swagger/: index.html  swagger-config.yaml
